--- a/holyland.html
+++ b/holyland.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
 
     
 
@@ -243,7 +243,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mqZKS4llDPpf9MILRNyU5QNr9Kc6g+8hvQ27HngSnHcVQco0CjVmrbLeteKpRDBNVPKkpzQIsp+4bcNhXYQ9LL8hPSNXJl8ZCtCLxKG96Dy1tKOoWXnkdfrhGTi5DDRN">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rha2DONFJE7oig/w4Dl48Bcv2V0eGf6zWqPX9ZPTbaC7YGDBD0llCC8FTPzJKxyY3ehsqjuTOk5xNWUWNc260yO4oG0R6/MZyL9HC/pmL1MBDonRttWbUd586dwkz+34">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
