create github pages

--- a/mexico.html
+++ b/mexico.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header1 cid-rDpa92ezaH" id="header1-11">
 
     
 
@@ -224,7 +224,7 @@
 <br>Este viaje tiene espacio limitado, y para que podamos retener su espacio es necesario un depósito de $ 500.00 por persona tan pronto como sea posible, este precio se mantendrá hasta el 15 de enero después del precio del 15 de enero subirá $ 150.00 más, esto se debe a la regla de la aerolínea .<br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:+18328203166">LLAMAR</a>
-                    <a class="btn btn-md btn-danger display-4" href="mexico.html">RESERVAR</a></div>
+                    <a class="btn btn-md btn-danger display-4" href="https://wa.me/+18328203166">RESERVAR</a></div>
             </div>
         </div>
     </div>
@@ -285,7 +285,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VyShpiaMIRQSxvu/1qbeISKqahdCeCxjbS6+eegujFJ8KxZWEKac1pDeLW0aeo+nBFJSzm7D78skLDONHi2S9cvROtwbj1YCXgUs5EDUd8wLWNes+FZaSTE+AZi63Vbi">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="c8tSt21TA36GkxC8o3RppItPpxrcexaFD6YYz9lQc2Ex+worH64Bc2Z7BqcugK5d9ozd7DchQbF8wIKEtTu8JbXK1m8GflXBA+Wnm7i0dCcuSGiXyP7tau8RDLCknu54">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
