--- a/paris.html
+++ b/paris.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
 
     
 
@@ -264,7 +264,7 @@
 <br>Este viaje tiene espacio limitado, y para que podamos retener su espacio es necesario un depósito de $ 500.00 por persona tan pronto como sea posible, este precio se mantendrá hasta el 15 de enero después del precio del 15 de enero subirá $ 150.00 más, esto se debe a la regla de la aerolínea .<br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:+18328203166">LLAMAR</a>
-                    <a class="btn btn-md btn-danger display-4" href="mexico.html">RESERVAR</a></div>
+                    <a class="btn btn-md btn-danger display-4" href="https://wa.me/+18328203166">RESERVAR</a></div>
             </div>
         </div>
     </div>
@@ -325,7 +325,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EZuFjQwhIbQPqKXxV1U6HZSmBMSBMTCm5PVM4NAhUOcZcPGIehioVtUWGGKcWTivWHS0UFyBXTffW5evcODNCpHC8AIA/kcKue95ikEDXI7GcWgjwv2uCCaEoqoXXXgE">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AWDRTi/2+IxJOkNg84tu7/9JX54UEvTGbm88CtVt2jwkxIhqpgWuy7MTaCIshvqDfRCjbsUz7sITnM0e04dNKF+FmWg8CEmKUjiE8ebVA2l1QjrDZCUae6wa3fa22pTP">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
