--- a/fatima.html
+++ b/fatima.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-rDpKSvYW11" id="header1-1b">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header1 cid-rDpKSvYW11" id="header1-1b">
 
     
 
@@ -180,7 +180,7 @@
 <br>Este viaje tiene espacio limitado, y para que podamos retener su espacio es necesario un depósito de $ 500.00 por persona tan pronto como sea posible, este precio se mantendrá hasta el 15 de enero después del precio del 15 de enero subirá $ 150.00 más, esto se debe a la regla de la aerolínea.<br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:+18328203166">LLAMAR</a>
-                    <a class="btn btn-md btn-danger display-4" href="mexico.html">RESERVAR</a></div>
+                    <a class="btn btn-md btn-danger display-4" href="https://wa.me/+18328203166">RESERVAR</a></div>
             </div>
         </div>
     </div>
@@ -241,7 +241,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yky08HTJXWSyb6qc1xwTBNgvi5WIrbbg4HHb/lU+sB7YgJKkl/f+lUzFd6V8J8UxWDDoHk5kQkSpPzgHpdCH4Sg9fWOIuK19SreBqtUCp5EHul5cjSMZWKTpdKfl6b2G">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iMXoCZxvqJvcqNTaSBcYB+X1RpCie/+m7b3gMc0dZ3O8fHcy2Tjuakw1FKxF0jkY40E/rTMDlDIGKVu98AkYweEmT35ZsERi6p4yuTkXokXkq6k51l6nDcQVeXStT6lE">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
