--- a/holyland.html
+++ b/holyland.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="header1 cid-rDpLkolbiU" id="header1-1h">
 
     
 
@@ -182,7 +182,7 @@
 <br>Este viaje tiene espacio limitado, y para que podamos retener su espacio es necesario un depósito de $ 500.00 por persona tan pronto como sea posible, este precio se mantendrá hasta el 15 de enero después del precio del 15 de enero subirá $ 150.00 más, esto se debe a la regla de la aerolínea .<br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:+18328203166">LLAMAR</a>
-                    <a class="btn btn-md btn-danger display-4" href="mexico.html">RESERVAR</a></div>
+                    <a class="btn btn-md btn-danger display-4" href="https://wa.me/+18328203166">RESERVAR</a></div>
             </div>
         </div>
     </div>
@@ -243,7 +243,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rha2DONFJE7oig/w4Dl48Bcv2V0eGf6zWqPX9ZPTbaC7YGDBD0llCC8FTPzJKxyY3ehsqjuTOk5xNWUWNc260yO4oG0R6/MZyL9HC/pmL1MBDonRttWbUd586dwkz+34">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QImFunFZrI44T9GwmI8REzLjdfBs81Roo9Qw81FRUrYf2j8wNUl8Rnu0nzwWSioSbcPyMvw2KZ35zhbkBFuGwIof5y5kDGzHGBcReCCRKxiJoUq2vQQwEqm9XMZndTBp">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
