--- a/lourdes.html
+++ b/lourdes.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header1 cid-rDpLuGmfKl" id="header1-1j">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header1 cid-rDpLuGmfKl" id="header1-1j">
 
     
 
@@ -215,7 +215,7 @@
 <br>Este viaje tiene espacio limitado, y para que podamos retener su espacio es necesario un depósito de $ 500.00 por persona tan pronto como sea posible, este precio se mantendrá hasta el 15 de enero después del precio del 15 de enero subirá $ 150.00 más, esto se debe a la regla de la aerolínea .<br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:+18328203166">LLAMAR</a>
-                    <a class="btn btn-md btn-danger display-4" href="mexico.html">RESERVAR</a></div>
+                    <a class="btn btn-md btn-danger display-4" href="https://wa.me/+18328203166">RESERVAR</a></div>
             </div>
         </div>
     </div>
@@ -276,7 +276,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zlJmzZgaYUsVYiLU/QSQ099ZqOw/M5R/wPz3FMvMKnlR15jkE0gm1VJLSBZvO5Vds8JeJrGvyV2hGcH8gPUWS/IwBgY/Nqb0hSaIaaU4FIZ45Wg5YXnD1bKD4pzXpXaj">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GoE+qQQiaNyA85hySIOfPGEQdsYkvNYmkOEEWJSYupeajXDOuYNEpivK61blwJeP4Cbji0oLwUb1PLwzoONcbQZjLylkUqePJcwx18A3EiWo866LGkctnR5p4ufzU/P6">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
