--- a/poland.html
+++ b/poland.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
 
     
 
@@ -218,7 +218,7 @@
 <br>Este viaje tiene espacio limitado, y para que podamos retener su espacio es necesario un depósito de $ 500.00 por persona tan pronto como sea posible, este precio se mantendrá hasta el 15 de enero después del precio del 15 de enero subirá $ 150.00 más, esto se debe a la regla de la aerolínea .<br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="tel:+18328203166">LLAMAR</a>
-                    <a class="btn btn-md btn-danger display-4" href="mexico.html">RESERVAR</a></div>
+                    <a class="btn btn-md btn-danger display-4" href="https://wa.me/+18328203166">RESERVAR</a></div>
             </div>
         </div>
     </div>
@@ -279,7 +279,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="j7djS9toO5dToEHJEDLXBWfLwymqha8OTRDpSRy9hhSUfJL9kfgaWWzagPa1Fkq93DaXPm0JclYrafo9P6JAkzwNF8Jcrh51apjCWQFBpvFdO0dJeKHMDJvl3KDWMNMH">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pu6NNfTBiqtcn/qBV8xEa8bwK8g90E4kBikvmgMQquuD4cIPDJsRXHxK4FSwR/elBWcadhXl7B3QuE1GXcgN6b9+10+2tYEMKfHDxsTH+K14YPOvI+zYui/XC2aN4ge5">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
