--- a/paris.html
+++ b/paris.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-rDpLxOAxK9" id="header1-1k">
 
     
 
@@ -105,10 +105,9 @@
                 </span>          
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 10<div>Paris / Houston</div></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">After our breakfast transfer to the airport to return to USA.
-<br>
-<br></p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 10
+<div>Paris / Houston</div></h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Después de nuestro desayuno, traslado al aeropuerto para regresar a Estados Unidos.<br></p>
                      </div>
                 </div>
             </div>
@@ -119,9 +118,10 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 9<div>Lourdes / Paris</div></h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 9
+<div>Lourdes / Paris</div></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            After breakfast, transfer to airport to return to Paris rest of the day off, dinner and then overnight at hotel
+                            Después del desayuno, traslado al aeropuerto para regresar a París, resto del día libre, cena y alojamiento en el hotel.
                         </p>
                     </div>
                 </div>
@@ -133,8 +133,9 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 8<div>Lourdes</div></h4>      
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">After our Mass if you like you can continue to go to the healing bath or shop we will have this 1 day for more personal devotions dinner at hotel.</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 8
+<div>Lourdes</div></h4>      
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Después de nuestra misa, si lo desea, puede continuar yendo al baño curativo o comprar, tendremos este 1 día para cenas de devociones más personales en el hotel.</p>
                     </div>
                 </div>
             </div>
@@ -145,8 +146,9 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 7<div>Lourdes</div></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">After breakfast we will go to our regular Mass, after Mass we will take our healing bath, where a lot of miracles took place, we will gather with people from all over the world to pray the rosary while waiting for our turn to take the healing bath, then lunch in our own rest of the day off, after dinner candlelight procession (optional).</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 7
+<div>Lourdes</div></h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Después del desayuno iremos a nuestra Misa regular, después de la Misa tomaremos nuestro baño curativo, donde se llevaron a cabo muchos milagros, nos reuniremos con personas de todo el mundo para rezar el rosario mientras esperamos nuestro turno para tomar la curación. baño, luego almuerzo en nuestro propio resto del día libre, después de la cena procesión a la luz de las velas (opcional).</p>
                     </div>
                 </div>
             </div>
@@ -157,9 +159,10 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 6<div>Lourdes</div></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">After breakfast go to Mass, after Mass we will gather with our guide for our tour to visit the home of Bernadette where her and her family leaved, Boly Mill, walk to the Basilica of St. Pius X,
-<br>In the afternoon at can view the video of the apparitions, rest of the day for personal devotions. Dinner at hotel and if you like can join the candlelight and nightly rosary, back to the hotel.</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 6
+<div>Lourdes</div></h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Después del desayuno, vaya a misa, después de la misa nos reuniremos con nuestro guía para nuestro recorrido para visitar la casa de Bernadette donde ella y su familia se fueron, Boly Mill, caminar hacia la Basílica de San Pío X,
+<br>Por la tarde en puede ver el video de las apariciones, resto del día para devociones personales. Cena en el hotel y, si lo desea, puede unirse a la luz de las velas y al rosario nocturno, de regreso al hotel.</p>
                     </div>
                 </div>
             </div>
@@ -170,9 +173,8 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 6
-<div>Paris / Lourdes</div></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Transfer from hotel to ORLY we take our flight to Lourdes, arriving in Lourdes, if time we will visit the Grotto, go to Mass and Procession, (optional) dinner and overnight at hotel.</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 5<div>Paris / Lourdes</div></h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Traslado del hotel a ORLY tomamos nuestro vuelo a Lourdes, llegando a Lourdes, si es el momento visitaremos la Gruta, iremos a misa y procesión, cena (opcional) y alojamiento en el hotel.</p>
                     </div>
                 </div>
             </div>
@@ -183,9 +185,10 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 4<div>Paris / Lisieux</div></h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 4
+<div>Paris / Lisieux</div></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            After breakfast we will proceed to the Basilica and after Mass we will take our city tour to visit the national palace, Catheradal, and Chapultepec park. After lunch we will take the pyramid tour and dinner and overnight in the hotel.
+                            Después del desayuno, procederemos a la Basílica y después de la misa, realizaremos nuestro recorrido por la ciudad para visitar el palacio nacional, el Catheradal y el parque Chapultepec. Después del almuerzo, realizaremos el recorrido de la pirámide y la cena y alojamiento en el hotel.
                         </p>
                     </div>
                 </div>
@@ -197,10 +200,10 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 3
-<div>Paris</div></h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 3
+<div>París</div></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            After breakfast tour in Paris we will visit the beautiful City of Paris, the Museum Louvre, Notre-Dame-Manmort, Arch of Triumph Eiffel, etc Tower and over night at the hotel.
+                            Después del desayuno en París, visitaremos la hermosa ciudad de París, el Museo del Louvre, Notre-Dame-Manmort, el Arco del Triunfo Eiffel, etc. Torre y durante la noche en el hotel.
                         </p>
                     </div>
                 </div>
@@ -212,10 +215,10 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 2
-<div>Paris</div></h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Dia 2
+<div>París</div></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Arrive in Paris, transfer to the hotel check inn, we will go to Mass at the Miraculous Medal Church afternoon panoramic tour to visit the beautiful Paris, dinner an overnight at the hotel
+                            Llegada a París, traslado al hotel, posada, iremos a misa en la visita panorámica de la Iglesia de la Medalla Milagrosa por la tarde para visitar el hermoso París, cena y alojamiento en el hotel.
                         </p>
                     </div>
                 </div>
@@ -227,10 +230,10 @@
                 </span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Day 1
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Día 1
 <div>Houston / Paris</div></h4> 
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Depart USA , relax enjoy your flight, dinner onboard.
+                            Salga de EE. UU., Relájese, disfrute de su vuelo, cena a bordo.
                         </p>
                     </div>
                 </div>
@@ -325,7 +328,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D2qNfzZJNlamwdn2nNIYJNd1q9dCqgodPDzbDIxwNj66lmPrewlsSL7o77gGJ5yWplLz1K8xlsSbc+NHVVbXCPVS2wOWM+V3ffv9IGnfgwxi2CfBjcRV6YF0Q2gUkcI7">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FtGkDnConebOaiXIirKhG/dTtU2lPfW4XYY3vLUKg3RmAiWzMNM4AUwwNGUPn7P37D1/kI9Hx2+fk/KubcNCvjzWbfjYSX1vax6wUood1i5ZANjEJEvjWYj6VSIJDqPW">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
