--- a/poland.html
+++ b/poland.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header1 cid-rDpLBjlrNA" id="header1-1l">
 
     
 
@@ -107,7 +107,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            That’s why it is our pleasure to invite you to see were Jesus had pore his infinite love for all the world.  “JESUS I TRUST IN YOU”
+                            Por eso es un placer invitarlos a ver si Jesús había pororado su amor infinito por todo el mundo. “JESÚS, CONFÍO EN TI”
                         </p>
                      </div>
                 </div>
@@ -121,7 +121,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Pope John Paul II canonized her as the first saint of the Great Jubilee year and also called for the celebration of the Second Sunday of Easter as DIVINE MERCY SUNDAY throughout the Church.
+                            El Papa Juan Pablo II la canonizó como la primera santa del año del Gran Jubileo y también convocó a la celebración del Segundo Domingo de Pascua como DOMINIO DIVINO DE LA MISERICORDIA en toda la Iglesia.
                         </p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"></h4>      
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Karol Cardinal Wojtyla, the Archbishop of Cracow.  On October 16, 1978, he was eelevated to the See of Peter as Pope John Paul II .  On March 7, 1992, Sr. Faustina’s virtues were declared heroic; on decembr 21, 1992, a healing through Sr. Faustina’s intercession was declared a miracle; on April 18, 1993 Pope John Paul II had the honor to declare the venerable  Servant of God Sister Faustina Blessed; and on April 30, 2000 
+                            Cardenal Karol Wojtyla, Arzobispo de Cracovia. El 16 de octubre de 1978, fue elevado a la Sede de Pedro como el Papa Juan Pablo II. El 7 de marzo de 1992, las virtudes de Sor Faustina fueron declaradas heroicas; el 21 de diciembre de 1992, una curación a través de la intercesión de Sor Faustina fue declarada un milagro; el 18 de abril de 1993, el papa Juan Pablo II tuvo el honor de declarar bendecida a la venerable Sierva de Dios, la hermana Faustina; y el 30 de abril de 2000 
                         </p>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            anting to look upon the earth, had to look through our Lord’s wounds.  And I understood that God blessed the earth for the sake of Jesus .
+                            Para ver la tierra, tenía que mirar a través de las heridas de nuestro Señor. Y entendí que Dios bendijo la tierra por el bien de Jesús.
                         </p>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">n 1933 God gave Sr. Faustina a striking vision of his Mercy, Sister tells us “I saw a great light, with God the Father in the Midst of it. Between his light and the earth I saw Jesus nailed to the Cross and in such a way that God. 
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">En 1933, Dios le dio a Sor Faustina una visión sorprendente de su Misericordia, la hermana nos dice: “Vi una gran luz, con Dios el Padre en medio de ella. Entre su luz y la tierra vi a Jesús clavado en la cruz y de tal manera que Dios. 
                         </p>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"></h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                             We have the opportunity to introduce Poland, Krakaow a place of our DIVINE MERCY  
+                             Tenemos la oportunidad de presentar a Polonia, Cracovia, un lugar de nuestra DIVINA MISERICORDIA  
                         </p>
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Obtenga actualizaciones mensuales y cursos gratuitos.&nbsp;<br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pG0pf8oiYW5c1psKa0F7/AYazOy6TK1ysqcT73MChG4EeP3Qrz2x2EIo/fbHv8XcuBKFCZERXK4zhUkuPZSE6P5eoefErpenrLNHVF4wx+2NTtezqPJXByYqbVmrJXZT">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PZV04uPAZL5l8xA5W3ZKFFo1DfTQrtLer9YrK+hXrwdkhsFZgBE6vbsuYgW94ZEfSRY7lhHvFIqv/r7HSfxJ1f2ny9iwpyARuIf8gWjUDqQtlq69sRkw3nzGLoq6MbT2">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
